// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Switch/demo/basic.md correctly 1`] = `
<button
  aria-checked="false"
  class="arco-switch arco-switch-type-circle"
  role="switch"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;

exports[`renders Switch/demo/checked_text.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-circle"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
      <div
        class="arco-switch-text-holder"
      >
        OFF
      </div>
      <div
        class="arco-switch-text"
      >
        OFF
      </div>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-round arco-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
      <div
        class="arco-switch-text-holder"
      >
        1
      </div>
      <div
        class="arco-switch-text"
      >
        1
      </div>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-circle arco-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
      <div
        class="arco-switch-text-holder"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-check"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M41.678 11.05 19.05 33.678 6.322 20.95"
          />
        </svg>
      </div>
      <div
        class="arco-switch-text"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-check"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M41.678 11.05 19.05 33.678 6.322 20.95"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders Switch/demo/disabled.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-circle"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-circle arco-switch-checked"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-round"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-round arco-switch-checked"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-line"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-line arco-switch-checked"
      disabled=""
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
</div>
`;

exports[`renders Switch/demo/icon.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-circle arco-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      >
        <span
          class="arco-switch-dot-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-round arco-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      >
        <span
          class="arco-switch-dot-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      aria-checked="true"
      class="arco-switch arco-switch-type-line arco-switch-checked"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      >
        <span
          class="arco-switch-dot-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-check"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M41.678 11.05 19.05 33.678 6.322 20.95"
            />
          </svg>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`renders Switch/demo/loading.md correctly 1`] = `
<div
  class="arco-space arco-space-vertical"
>
  <div
    class="arco-space-item"
    style="margin-bottom:24px"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-type-circle arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-type-circle arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-type-round arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-type-round arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-type-line arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-type-line arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-space arco-space-horizontal arco-space-align-center"
    >
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-small arco-switch-type-circle arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-small arco-switch-type-circle arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-small arco-switch-type-round arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-small arco-switch-type-round arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
        style="margin-right:24px"
      >
        <button
          aria-checked="true"
          class="arco-switch arco-switch-small arco-switch-type-line arco-switch-checked arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
      <div
        class="arco-space-item"
      >
        <button
          aria-checked="false"
          class="arco-switch arco-switch-small arco-switch-type-line arco-switch-loading"
          role="switch"
          type="button"
        >
          <div
            class="arco-switch-dot"
          >
            <span
              class="arco-switch-dot-icon"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-loading"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
                />
              </svg>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Switch/demo/size.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-circle"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-small arco-switch-type-circle"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-round"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-small arco-switch-type-round"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-line"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-small arco-switch-type-line"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
</div>
`;

exports[`renders Switch/demo/type.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-circle"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-round"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      aria-checked="false"
      class="arco-switch arco-switch-type-line"
      role="switch"
      type="button"
    >
      <div
        class="arco-switch-dot"
      />
    </button>
  </div>
</div>
`;
